# aoc

./: .editorconfig  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  TODO.txt  aoc-vc.sln  aoc.sln  pipelines.yml
.github/workflows/: build.yaml
2015/: Makefile
2015/awk/: Makefile  all.sh  day08-p1.awk  day08-p2.awk
2015/c/: .gitignore  Makefile  all.sh  day01.c  day02.c  day03-p1.c  day03-p2.c  day04.c  day05-p1.c  day05-p2.c  day06-p1.c  day06-p2.c  day08.c  day09.c  day10.c  day11.c  day12-p1.c  day12-p2.c  day13-noname.c  day13.c  day14-p1.c  day14.c  day15.c  day16.c  day17.c  day18.c  day19.c  wiresim-declops.c  wiresim.c
2015/cs/: Makefile  all.sh  day09.cs
2015/data/: 01-puzzle.txt  02-puzzle.txt  03-puzzle.txt  06-puzzle.txt  09-puzzle.txt  10-puzzle.txt  12-puzzle.txt  13-puzzle.txt  14-puzzle.txt  15-puzzle.txt  16-puzzle.txt  17-puzzle.txt  (+1 more)
2016/: Makefile
2017/: Makefile
2018/: Makefile
2019/: Makefile
2020/: Makefile  all-par.sh  all-vc6.bat  all.sh  aoc2020.dsw  common.mk
2020/c/: CMakeLists.txt  Makefile  all-par.sh  all.sh  day01.c  day02.c  day03.c  day04.c  day05.c  day06.c  day07.c  day09.c  day11.c  day12.c  day13-p2-brute.c  day13-times.txt  day13.c  day14-p1.c  day14-p2.c  day14.c  day15.c  day16.c  day18.c  day19.c  day20.c  day21.c  day22.c  day23.c  day24.c  day25.c
2020/c/compat/: builtin.c  builtin.h  inttypes.h  string.c  string.h
2020/c/vc6/: all.bat  aoc2020.dsw  day03.dsp  day04.dsp  day05.dsp  day06.dsp  day07.dsp  day11.dsp  day12.dsp  day13.dsp  day14.dsp  day15.dsp  day16.dsp  day17.dsp  day18.dsp  day19.dsp  day20.dsp  day21.dsp  day22.dsp  day23.dsp  day24.dsp  day25.dsp
2020/c/vs/: all.ps1  compat.vcxproj  compat.vcxproj.filters  day01.vcxproj  day01.vcxproj.filters  day02.vcxproj  day02.vcxproj.filters  day03.vcxproj  day03.vcxproj.filters  day04.vcxproj  day04.vcxproj.filters  day05.vcxproj  day05.vcxproj.filters  day06.vcxproj  day06.vcxproj.filters  day07.vcxproj  day07.vcxproj.filters  day08.vcxproj  day08.vcxproj.filters  day09.vcxproj  day09.vcxproj.filters  day10.vcxproj  day10.vcxproj.filters  day11.vcxproj  day11.vcxproj.filters  day12.vcxproj  day12.vcxproj.filters  day13.vcxproj  day13.vcxproj.filters  day14.vcxproj  day14.vcxproj.filters  day15.vcxproj  day15.vcxproj.filters  day16.vcxproj  day16.vcxproj.filters  day17.vcxproj  day17.vcxproj.filters  day18.vcxproj  day18.vcxproj.filters  day19.vcxproj  (+13 more)
2020/c/vs/compat/: compat.vcxproj  compat.vcxproj.filters
2020/c/vs/day01/: day01.vcxproj  day01.vcxproj.filters
2020/c/vs/day02/: day02.vcxproj  day02.vcxproj.filters
2020/c/vs/day03/: day03.vcxproj  day03.vcxproj.filters
2020/c/vs/day04/: day04.vcxproj  day04.vcxproj.filters
2020/c/vs/day05/: day05.vcxproj  day05.vcxproj.filters
2020/c/vs/day06/: day06.vcxproj  day06.vcxproj.filters
2020/c/vs/day07/: day07.vcxproj  day07.vcxproj.filters
2020/c/vs/day08/: day08.vcxproj  day08.vcxproj.filters
2020/c/vs/day09/: day09.vcxproj  day09.vcxproj.filters
2020/c/vs/day10/: day10.vcxproj  day10.vcxproj.filters
2020/c/vs/day11/: day11.vcxproj  day11.vcxproj.filters
2020/c/vs/day12/: day12.vcxproj  day12.vcxproj.filters
2020/c/vs/day13/: day13.vcxproj  day13.vcxproj.filters
2020/c/vs/day14/: day14.vcxproj  day14.vcxproj.filters
2020/c/vs/day15/: day15.vcxproj  day15.vcxproj.filters
2020/c/vs/day16/: day16.vcxproj  day16.vcxproj.filters
2020/c/vs/day17/: day17.vcxproj  day17.vcxproj.filters
2020/c/vs/day18/: day18.vcxproj  day18.vcxproj.filters
2020/c/vs/day19/: day19.vcxproj  day19.vcxproj.filters
2020/c/vs/day20/: day20.vcxproj  day20.vcxproj.filters
2020/c/vs/day21/: day21.vcxproj  day21.vcxproj.filters
2020/c/vs/day22/: day22.vcxproj  day22.vcxproj.filters
2020/c/vs/day23/: day23.vcxproj  day23.vcxproj.filters
2020/c/vs/day24/: day24.vcxproj  day24.vcxproj.filters
2020/c/vs/day25/: day25.vcxproj  day25.vcxproj.filters
2021/: Makefile
2021/c/: CMakeLists.txt  Makefile  all.sh  compat.c  compat.h  day01.c  day02.c  day03.c  day04.c  day05.c  day06-orig.c  day07-opt.c  day07-orig.c  day07.c  day08-p1.c  day08.c  day09.c  day10.c  day11-mp4.c  day11-short.c  day11.c  day12.c  day13.c  day14.c  day15-astar.c  day15.c  day16-orig.c  day16.c  day17-fork.c  day17.c  day18.c  day19.c  day20.c  day21.c  day22.c  day23-dijkstra.c  day23.c  day25.c  vec.h
2021/c/day24/: Makefile  compile.awk  day24.c
2021/c/vs/: compat.vcxproj  day01.vcxproj  day02.vcxproj  day03.vcxproj  day04.vcxproj  day05.vcxproj  day06-orig.vcxproj  day06.vcxproj  day07-orig.vcxproj  day07.vcxproj  day08-p1.vcxproj  day08.vcxproj  day09.vcxproj  day10.vcxproj  day11-short.vcxproj  day11.vcxproj  day12.vcxproj  day13.vcxproj  day14.vcxproj  day15-astar.vcxproj  day15.vcxproj  day16-orig.vcxproj  day16.vcxproj  day17.vcxproj  day18.vcxproj  day19.vcxproj  day20.vcxproj  day21.vcxproj  day22.vcxproj  day23-dijkstra.vcxproj  day23.vcxproj  day25.vcxproj
2022/: 19-puzzle.txt  Makefile  input-stats.sh
2023/: Makefile
2024/: Makefile
ci/: az-linux.yml  az-make.sh  azure.yml  steps-linux.yml  steps-unix.yml
mk/: common.mk  subdirs.mk
script/: cloud.py  get-varnames.sh
(+910 files in other folders)
