cmake_minimum_required(VERSION 3.20)
project(aoc-2020-c)

set(COMPAT compat/builtin.c compat/builtin.h compat/inttypes.h compat/stdint.h
        compat/stdio.h compat/string.c compat/string.h)

add_executable(day01 ${COMPAT} day01.c)
add_executable(day02 ${COMPAT} day02.c)
add_executable(day03 ${COMPAT} day03.c)
add_executable(day04 ${COMPAT} day04.c)
add_executable(day05 ${COMPAT} day05.c)
add_executable(day06 ${COMPAT} day06.c)
add_executable(day07 ${COMPAT} day07.c)
add_executable(day08 ${COMPAT} day08.c)
add_executable(day09 ${COMPAT} day09.c)
add_executable(day10 ${COMPAT} day10.c)
add_executable(day11 ${COMPAT} day11.c)
add_executable(day12 ${COMPAT} day12.c)
add_executable(day13 ${COMPAT} day13.c)
#add_executable(day13-p2-brute ${COMPAT} day13-p2-brute.c)
add_executable(day14 ${COMPAT} day14.c day14-p1.c day14-p2.c)
add_executable(day15 ${COMPAT} day15.c)
add_executable(day16 ${COMPAT} day16.c)
add_executable(day17 ${COMPAT} day17.c day17-p1.c day17-p2.c)
add_executable(day18 ${COMPAT} day18.c)
add_executable(day19 ${COMPAT} day19.c)
add_executable(day20 ${COMPAT} day20.c)
add_executable(day21 ${COMPAT} day21.c)
add_executable(day22 ${COMPAT} day22.c)
add_executable(day23 ${COMPAT} day23.c)
add_executable(day24 ${COMPAT} day24.c)
add_executable(day25 ${COMPAT} day25.c)